--- a/fifteenth-week/README
+++ b/fifteenth-week/README
@@ -13,6 +13,9 @@ Spring 和 ORM 等框架
     spring，主要是IOC（控制反转）和AOP（面向切面编程）这两点为最核心技术点。
         IOC指的是spring自己维护bean的创建和销毁，不需要手动new一个bean。
         AOP方便横向切入业务逻辑，统一控制。
+        动态代理
+            cglib——子类
+            jdk——接口
     ORM:
         数据库和对象之间建立映射，方便操作数据库，用户不需要关注太多数据库连接操作。
         主要核心技术点是反射和动态代理。
