--- a/fifteenth-week/README
+++ b/fifteenth-week/README
@@ -26,7 +26,7 @@ MySQL 数据库和 SQL
     受限于数据库性能，需要进行分库分表，分库分表主要是分成水平和垂直两方面的拆分，主流使用的框架是sharding-sphere，基本原理都是通过框架或中间件将原本多个物理库物理表封装成一个逻辑库，由中间件或框架帮忙操作数据库。
 RPC 和微服务
     RPC，remote process call。主要是进行远程服务调用的，核心技术主要在网络通信，以及数据协议。
-    微服务主要是将服务根据业务进行拆分，使得每个服务关注的业务尽量独立且小，每个服务的资源各自独立，松散低耦合。
+    微服务主要是将服务根据业务进行拆分，使得每个服务关注的业务尽量独立且小，每个服务的资源各自独立，松散低耦合，主流使用spring cloud，dubbo。
 分布式缓存
     缓存的作用是提高性能，快速读写，响应及时。分布式缓存主要是通过内存或其他高速存储来进行加速。分布式涉及并发，网络。同时需要关注分布式缓存常见的几个问题：
     穿透，击穿，雪崩。
